Fri Mar 25 21:04:21 UTC 2011  Adam Mitz  <mitza@ociweb.com>

        * dds/DCPS/DataReaderImpl.cpp:
        * dds/DCPS/DataReaderRemoteImpl.h:
        * dds/DCPS/DataReaderRemoteImpl.cpp:
        * dds/DCPS/DataWriterImpl.cpp:
        * dds/DCPS/DataWriterRemoteImpl.h:
        * dds/DCPS/DataWriterRemoteImpl.cpp:

          Account for the scenario where an ORB upcall is active in one of
          the "remotes" while its "parent" object is cleaning up.  In this
          case the parent is explicitly detached, making the upcall a no-op.

Fri Mar 25 15:27:27 UTC 2011  Adam Mitz  <mitza@ociweb.com>

        * tools/modeling/features/org.opendds.modeling.feature/feature.xml:
        * tools/modeling/features/org.opendds.modeling.site/site.xml:
        * tools/modeling/plugins/com.ociweb.emf.util/META-INF/MANIFEST.MF:
        * tools/modeling/plugins/com.ociweb.gmf/META-INF/MANIFEST.MF:
        * tools/modeling/plugins/org.opendds.modeling.common/META-INF/MANIFEST.MF:
        * tools/modeling/plugins/org.opendds.modeling.diagram.datalib/META-INF/MANIFEST.MF:
        * tools/modeling/plugins/org.opendds.modeling.diagram.dcpslib/META-INF/MANIFEST.MF:
        * tools/modeling/plugins/org.opendds.modeling.diagram.main/META-INF/MANIFEST.MF:
        * tools/modeling/plugins/org.opendds.modeling.diagram.policylib/META-INF/MANIFEST.MF:
        * tools/modeling/plugins/org.opendds.modeling.gmf/diagrams/DataLib.gmfgen:
        * tools/modeling/plugins/org.opendds.modeling.gmf/diagrams/DcpsLib.gmfgen:
        * tools/modeling/plugins/org.opendds.modeling.gmf/diagrams/MainDiagram.gmfgen:
        * tools/modeling/plugins/org.opendds.modeling.gmf/diagrams/PolicyLib.gmfgen:
        * tools/modeling/plugins/org.opendds.modeling.graphics/META-INF/MANIFEST.MF:
        * tools/modeling/plugins/org.opendds.modeling.help/META-INF/MANIFEST.MF:
        * tools/modeling/plugins/org.opendds.modeling.model.edit/META-INF/MANIFEST.MF: