@@ -12,8 +12,9 @@
 <p><a href="http://www.opendds.org/">OpenDDS</a> is an open source C++ implementation of the Object Management Group (OMG)
 <a href="http://www.omg.org/technology/documents/dds_spec_catalog.htm">
 Data Distribution Service (DDS)</a>.</p>
-<p>The OpenDDS Modeling SDK allows modeling of the OpenDDS components to be done graphically and the
-resulting model to be automatically converted to C++ code that can accessed by your application.</p>
+<p>The OpenDDS Modeling SDK allows graphical modeling of the OpenDDS components
+and automatic conversion of the resulting model to C++ code that can be
+accessed by your application.</p>
 
 </body>
 </html>
