@@ -15,8 +15,8 @@
   <h2>Creating DCPS Libraries</h2>
 
   <p>From the main diagram a DCPS Library can be created by either
-  double-clicking on the DataLib tool in the palette, or by
-  clicking on the DataLib tool and then dragging the region on the
+  double-clicking on the DcpsLib tool in the palette, or by
+  clicking on the DcpsLib tool and then dragging the region on the
   diagram surface that the DCPS Library figure should occupy. After
   that specify the name to use for the library.</p>
 
