@@ -20,7 +20,7 @@
   OpenDDS Modeling SDK is available to make it convenient to work
   with model diagrams.</p>
 
-  <p>This perceptive can be activated by</p>
+  <p>This perspective can be activated by</p>
 
   <ol>
     <li>Clicking on the Perspective button and then Other...</li>
